# trains_bevy

./: Cargo.toml  notes.txt
assets/models/Peachs Castle Exterior/blend/: untitled.blend  untitled.blend1
assets/models/Peachs Castle Exterior/glb/: untitled.glb
assets/models/Peachs Castle Exterior/gltf/: one_mesh.gltf  untitled.gltf
assets/models/Peachs Castle Exterior/gltf/flipped_faces/: untitled.glb
src/: controller.rs  examples.rs  lib.rs  main.rs  snowflake.rs  trains_plugin.rs
src/examples/: ecs_example_1.rs  snowflake.rs
